Added Spring Data Repositories and custom Repository